# gabriel_machado-sdk

./: .gitignore  LICENSE.txt  README.md  setup.cfg
lotrsdk/: lotrsdk.py
src/: lotrsdk.py  main.py  test.py
