[metadata]
name = lotr-sdk-liblab-gdm
version = 0.0.4
author = gabrieldiasmac
author_email = gabriel.d.machado92@gmail.com
description = Get all data and quotes from LOTR movies
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/gabrieldmac/lotr-sdk-liblab
project_urls =
    repository = https://github.com/gabrieldmac/lotr-sdk-liblab
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True